Tue Sep 26 11:41:08 1995  Karl Fogel  <kfogel@totoro.cyclic.com>

        * version.c: Upped version to 1.5.89 for test release preceding
        1.6.

Wed Sep 20 15:32:49 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* ignore.c (ign_add_file): Check for errors from fopen and fclose.

Tue Sep 19 18:02:16 1995  Jim Blandy  <jimb@totoro.cyclic.com>

	* Makefile.in (DISTFILES): Remove sanity.el from this list; the
	file has been deleted.

Thu Sep 14 14:17:52 1995  Peter Wemm  <peter@haywire.dialix.com>

	* import.c: Recover from being unable to open the user file.

	* update.c (join_file): Print a message in the case where the file
	was added.

	* mkmodules.c: Deal with .db as well as .pag/.dir (for use with
	BSD 4.4 and real dbm support).

Mon Sep 11 15:44:13 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* release.c (release): Revise comment regarding why and how we
	skip argv[0].

Mon Sep 11 10:03:59 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * release.c (release): use return value of pclose to determine
        success of update.

Mon Sep 11 09:56:33 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* release.c (release_delete): Fix comment.

Sun Sep 10 18:48:35 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * release.c (release): made work with client/server.
        Don't ask if <arg> is mentioned in `modules'.

Fri Sep  8 13:25:55 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: When committing a removal, send stdout to LOGFILE;
	this is no longer a silent operation.

	* sanity.sh: Remove OUTPUT variable; it is unused.

	* client.c: Add comment regarding deleting temp file.
	* main.c: Add comment regarding getopt REQUIRE_ORDER.

Thu Sep  7 20:24:46 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * main.c (main): use getopt_long(), accept "--help" and
        "--version".
        Don't assume EOF is -1.

Thu Sep 7  19:18:00 1995  Jim Blandy  <jimb@cyclic.com>

	* cvs.h (unlink_file_dir): Add prototype for this.
